<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="bookViewModel"
            type="com.example.myapplication.viewmodel.BookViewModel"/>
        <variable
            name="pos"
            type="int"/>
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".BookActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/imgBook"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:scaleType="fitStart"
                loadImageFromUrl="@{bookViewModel.bookList.get(pos).image_url}"
                android:contentDescription="@string/book_image"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/book_title"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imgBook" />

            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@{bookViewModel.bookList.get(pos).title}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toEndOf="@id/bookTitle"
                app:layout_constraintTop_toTopOf="@id/bookTitle"
                app:layout_constraintWidth_max="@dimen/max_width_constraint" />

            <TextView
                android:id="@+id/authorName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/author_name"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTitle" />

            <TextView
                android:id="@+id/tvAuthor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@{bookViewModel.bookList.get(pos).author}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toEndOf="@id/authorName"
                app:layout_constraintTop_toTopOf="@id/authorName"
                app:layout_constraintWidth_max="@dimen/max_width_constraint" />

            <TextView
                android:id="@+id/pages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/pages"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAuthor" />

            <TextView
                android:id="@+id/tvPages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@{Integer.toString(bookViewModel.bookList.get(pos).pages)}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toEndOf="@id/pages"
                app:layout_constraintTop_toTopOf="@id/pages"
                app:layout_constraintWidth_max="@dimen/max_width_constraint" />

            <TextView
                android:id="@+id/isbn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/isbn"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPages" />

            <TextView
                android:id="@+id/tvISBN"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@{bookViewModel.bookList.get(pos).isbn}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toEndOf="@id/isbn"
                app:layout_constraintTop_toTopOf="@id/isbn"
                app:layout_constraintWidth_max="@dimen/max_width_constraint" />

            <TextView
                android:id="@+id/yearPublish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/year_published"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvISBN" />

            <TextView
                android:id="@+id/tvYear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@{Integer.toString(bookViewModel.bookList.get(pos).year_published)}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toEndOf="@id/yearPublish"
                app:layout_constraintTop_toTopOf="@id/yearPublish"
                app:layout_constraintWidth_max="@dimen/max_width_constraint" />

            <TextView
                android:id="@+id/publisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/publisher"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvYear" />


            <TextView
                android:id="@+id/tvPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@{bookViewModel.bookList.get(pos).publisher}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toEndOf="@id/publisher"
                app:layout_constraintTop_toTopOf="@id/publisher"
                app:layout_constraintWidth_max="@dimen/max_width_constraint" />

            <TextView
                android:id="@+id/subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/subject"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPublisher" />

            <TextView
                android:id="@+id/tvSubject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@{bookViewModel.bookList.get(pos).subject}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toEndOf="@id/subject"
                app:layout_constraintTop_toTopOf="@id/subject"
                app:layout_constraintWidth_max="@dimen/max_width_constraint" />

            <TextView
                android:id="@+id/genres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/genres"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSubject" />

            <TextView
                android:id="@+id/tvGenres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@{bookViewModel.bookList.get(pos).genres}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toEndOf="@id/genres"
                app:layout_constraintTop_toTopOf="@id/genres"
                app:layout_constraintWidth_max="@dimen/max_width_constraint" />


            <TextView
                android:id="@+id/originalLang"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/original_language"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGenres" />

            <TextView
                android:id="@+id/tvOriginalLanguages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_start"
                android:text="@{bookViewModel.bookList.get(pos).originalLanguage}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toEndOf="@id/originalLang"
                app:layout_constraintTop_toTopOf="@id/originalLang"
                app:layout_constraintWidth_max="@dimen/max_width_constraint" />

            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/marginTop"
                android:text="@string/description"
                android:textColor="@color/lightBlack"
                android:textSize="@dimen/textSize"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvOriginalLanguages" />

            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@{bookViewModel.bookList.get(pos).description}"
                android:textColor="@color/grey"
                android:textSize="@dimen/textSize"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/description" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</layout>